Replace Nashorn with GraalVM JS engine in UDF.
This changes replaces the Nashorn with GraalVM JavaScript
engine, such as Nashorn is scheduled for removal in the
future JDK version, see https://openjdk.java.net/jeps/335.

Please note that we do  not use the GraalVM JIT compiler as the
optimizing compile of the GraalVM JavaScript code, but instead
the GraalVM JavaScript engine is used to compile and execute
JavaScript code.